[package]
name = "advent-of-code_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bitvec = "1.0.1"
fxhash = "0.2.1"
itertools = "0.13.0"
memchr = "2.7.4"
phf = { version = "0.11.2", features = ["macros"] }
rayon = "1.10.0"
regex = "1.11.1"
tinyvec = "1.8.0"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
indoc = "2.0.5"
paste = "1.0.15"

[[bench]]
name = "bench_days"
harness = false
